--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.4.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-firebaseui": "^4.1.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
