--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.4.1",
     "react": "^17.0.0",
