--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.7.0",
     "mongo": "^0.1.0",
     "mongoose": "^5.12.5",
     "nodemon": "^2.0.7",
