--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,17 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "tsc && nodemon index.js"
+    "start": "ts-node-dev index.ts"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.11",
+    "@types/express-serve-static-core": "^4.17.19",
+    "@types/node": "^15.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -19,7 +23,8 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
+    "prettier": "^2.0.5",
+    "ts-node-dev": "^1.1.6",
     "tslint": "^6.1.3"
   }
 }
