--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.4.1",
     "react": "^17.0.0",
