--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "env-cmd -f .env.dev snowpack dev",
+    "start": "concurrently \"env-cmd -f .env.dev snowpack dev\" \"cd../server/ && yarn start\"",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -27,6 +27,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
+    "concurrently": "^7.1.0",
     "env-cmd": "^10.1.0",
     "prettier": "^2.0.5",
     "snowpack": "^3.0.1",
