--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node-dev index.ts"
+    "start": "concurrently \"ts-node-dev index.ts\" \"cd../app/ && yarn start\""
   },
   "type": "module",
   "author": "",
@@ -23,6 +23,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "concurrently": "^7.1.0",
     "prettier": "^2.0.5",
     "ts-node-dev": "^1.1.6",
     "tslint": "^6.1.3"
