--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "dev": "env-cmd -f .env.dev snowpack dev",
     "start": "concurrently \"env-cmd -f .env.dev snowpack dev\" \"cd../server/ && yarn start\"",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
@@ -30,6 +31,7 @@
     "concurrently": "^7.1.0",
     "env-cmd": "^10.1.0",
     "prettier": "^2.0.5",
+    "react-masonry-css": "^1.0.16",
     "snowpack": "^3.0.1",
     "typescript": "^4.0.0"
   }
