--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "dev": "ts-node-dev index.ts",
     "start": "concurrently \"ts-node-dev index.ts\" \"cd../app/ && yarn start\""
   },
   "type": "module",
