--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,8 @@
     "classnames": "^2.3.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.4.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-firebaseui": "^4.1.0",
     "react-router-dom": "^5.2.0"
   },
@@ -34,5 +34,8 @@
     "react-masonry-css": "^1.0.16",
     "snowpack": "^3.0.1",
     "typescript": "^4.0.0"
+  },
+  "overrides": {
+    "esbuild": "0.13.0"
   }
 }
