--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "ts-node-dev index.ts",
-    "start": "concurrently \"ts-node-dev index.ts\" \"cd../app/ && yarn start\""
+    "start": "ts-node-dev index.ts"
   },
   "type": "module",
   "author": "",
