--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "env-cmd -f .env.dev snowpack dev",
-    "start": "concurrently \"env-cmd -f .env.dev snowpack dev\" \"cd ../server/ && npm run start\"",
+    "start": "concurrently \"env-cmd -f .env snowpack dev\" \"cd ../server/ && npm run start\"",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
