--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,23 @@
-name: Deploy
+name: "Deploy"
 
 on:
   push:
-    branches: [master]
+    branches: ["master"]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
+
+      - name: "Deploy the web dyno"
+        uses: "akhileshns/heroku-deploy@v3.12.12"
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "mylesim-keepr"
-          heroku_email: "myles.sanigar@gmail.com"
-          usedocker: true
-          stack: "container"
+          docker_heroku_process_type: web
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: mylesim-keepr
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          justlogin: true
           docker_build_args: |
             NODE_ENV
             MONGO_DB_PASSWORD
@@ -24,3 +26,9 @@ jobs:
           NODE_ENV: production
           MONGO_DB_PASSWORD: ${{ secrets.MONGO_DB_PASSWORD }}
           SNOWPACK_PUBLIC_FIREBASE_API_KEY: ${{ secrets.SNOWPACK_PUBLIC_FIREBASE_API_KEY }}
+      - name: "Login to heroku registry"
+        run: heroku container:login
+      - name: "Build and push to heroku registry"
+        run: heroku container:push web --app mylesim-keepr
+      - name: "Releases the container"
+        run: heroku container:release web --app mylesim-keepr
