--- a/app/package.json
+++ b/app/package.json
@@ -8,32 +8,32 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "axios": "~0.21.1",
-    "classnames": "~2.3.1",
-    "dotenv": "~8.2.0",
-    "firebase": "~8.4.1",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-firebaseui": "~4.1.0",
-    "react-router-dom": "~5.2.0"
+    "axios": "0.21.1",
+    "classnames": "2.3.1",
+    "dotenv": "8.2.0",
+    "firebase": "8.4.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-firebaseui": "4.1.0",
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "~2.0.5",
-    "@snowpack/plugin-react-refresh": "~2.4.0",
-    "@snowpack/plugin-sass": "~1.4.0",
-    "@snowpack/plugin-typescript": "~1.2.0",
-    "@snowpack/web-test-runner-plugin": "~0.2.0",
-    "@types/react": "~17.0.0",
-    "@types/react-dom": "~17.0.0",
-    "@types/react-router-dom": "~5.1.7",
-    "@types/snowpack-env": "~2.3.2",
-    "@web/test-runner": "~0.12.0",
-    "concurrently": "~7.1.0",
-    "env-cmd": "~10.1.0",
-    "prettier": "~2.0.5",
-    "react-masonry-css": "~1.0.16",
-    "snowpack": "~3.0.1",
-    "typescript": "~4.0.0"
+    "@snowpack/plugin-dotenv": "2.0.5",
+    "@snowpack/plugin-react-refresh": "2.4.0",
+    "@snowpack/plugin-sass": "1.4.0",
+    "@snowpack/plugin-typescript": "1.2.0",
+    "@snowpack/web-test-runner-plugin": "0.2.0",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-router-dom": "5.1.7",
+    "@types/snowpack-env": "2.3.2",
+    "@web/test-runner": "0.12.0",
+    "concurrently": "7.1.0",
+    "env-cmd": "10.1.0",
+    "prettier": "2.0.5",
+    "react-masonry-css": "1.0.16",
+    "snowpack": "3.0.1",
+    "typescript": "4.0.0"
   },
   "overrides": {
     "esbuild": "0.13.0"
