--- a/server/package.json
+++ b/server/package.json
@@ -11,22 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "~4.17.11",
-    "@types/express-serve-static-core": "~4.17.19",
-    "@types/node": "~15.0.1",
-    "cors": "~2.8.5",
-    "dotenv": "~8.2.0",
-    "express": "~4.17.1",
-    "firebase-admin": "~9.7.0",
-    "mongo": "~0.1.0",
-    "mongoose": "~5.12.5",
-    "nodemon": "~2.0.7",
-    "typescript": "~4.2.4"
+    "@types/express": "4.17.11",
+    "@types/express-serve-static-core": "4.17.19",
+    "@types/node": "15.0.1",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "firebase-admin": "9.7.0",
+    "mongo": "0.1.0",
+    "mongoose": "5.12.5",
+    "nodemon": "2.0.7",
+    "typescript": "4.2.4"
   },
   "devDependencies": {
-    "concurrently": "~7.1.0",
-    "prettier": "~2.0.5",
-    "ts-node-dev": "~1.1.6",
-    "tslint": "~6.1.3"
+    "concurrently": "7.1.0",
+    "prettier": "2.0.5",
+    "ts-node-dev": "1.1.6",
+    "tslint": "6.1.3"
   }
 }
