--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,12 @@
     "mongo": "^0.1.0",
     "mongoose": "^5.12.5",
     "nodemon": "^2.0.7",
-    "typescript": "^4.2.4"
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
     "prettier": "^2.0.5",
-    "ts-node-dev": "^1.1.6",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3"
   }
 }
