--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node-dev index.ts",
-    "start": "ts-node-dev index.ts"
+    "dev": "ts-node index.ts",
+    "start": "ts-node index.ts"
   },
-  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
